--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,46 @@
  *= require_tree .
  *= require_self
  */
+
+ @media screen {
+    /* --- Reset Styles --- */
+    * {
+      margin: 0;
+      padding: 0;
+    }
+  
+    html, body {
+      height: 100%;
+      width: 100%;
+    }
+  
+    /* --- Welcome Page Styles --- */
+    body {
+      color:rgb(170, 53, 53);
+      font-family: Sans-Serif;
+      line-height: 18px;
+    }
+
+    .header {
+        text-align: right;
+      }
+      .header li {
+        display: inline;
+        font-size: 30px;
+        padding: 0px 10px 0px 10px; 
+      }
+      .header ul {
+        padding: 10px;
+        background: rgba(6, 76, 116, 0.719);
+      }
+        .wrapper { 
+        /* background: rgb(235, 123, 19); */
+        background: rgba(6, 76, 116, 0.39);
+        border: 3px solid white;
+        border-radius: 20px;
+        margin-top: 200px;
+        margin: 100px auto;
+        max-width: 960px;
+        padding: 2.25%; 
+        width: 85%;
+        } 
