--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,27 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  
+
   </head>
 
   <body>
-    <%= yield %>
+   <% if logged_in?  %>
+    <div class="header">
+      <header>
+        <ul>
+          <li> <%= link_to "Profile", user_path(current_user)%> </li>
+          <li> <%= link_to "Categories", categories_path%> </li>
+          <li> <%= link_to "All Posts", posts_path %> </li>
+          <li> <%= link_to "New Post", new_post_path%> </li>
+          <li> <%= button_to "Log Out", log_out_path%> </li>
+        </ul>
+      </header>
+      <%end%>
+      <%= flash[:error] %>
+    </div> 
+    <div class="wrapper">
+      <%= yield %>
+    </div>
   </body>
 </html>
